# singlestoredb-statistics

./: .gitignore  README.md
categorical/: Cargo.toml  README.md  categorical.sql  categorical.wit  pushwasm.txt
categorical/src/: lib.rs
correlation/: Cargo.toml  README.md  correlation.sql  correlation.wit  pushwasm.txt
correlation/src/: lib.rs
datasets/titanic/: README.md  schema.sql
linreg/: Cargo.toml  README.md  linreg.sql  linreg.wit  pushwasm.txt  schema.sql
linreg/data/: fitness.csv
linreg/src/: aovreg.rs  lib.rs  matrix.rs
