[package]
name = "linreg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wit-bindgen-rust = { git = "https://github.com/bytecodealliance/wit-bindgen.git", rev = "60e3c5b41e616fee239304d92128e117dd9be0a7" }
byte-slice-cast = "1.2.1"
statrs = "0.16.0"

[lib]
crate-type = ["cdylib", "lib"]
path = "src/lib.rs"
name = "linreg"

